syntax = "proto3";

package user.v1;

option go_package = "cex-core-api/gen/user/v1;user_v1";

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string name = 2;
  string surname = 3;
  string email = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UserAccount {
  string id = 1;
  string type = 2; 
  bool is_main = 3;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}


message Claims {  
  string user_id = 1;
}